Add theaters and reviews

--- a/MoviesApp/app/views/layouts/application.html.erb
+++ b/MoviesApp/app/views/layouts/application.html.erb
@@ -11,10 +11,11 @@
   <header>
     <h1>NU Movie Database</h1>
     <nav>
-      <%= link_to "Add a New Movie", '/movies/new' %>
+      <%= link_to "Movies", '/movies' %> |
+      <%= link_to "Theaters", '/theaters' %> |
+      <%= link_to "Reviews", '/reviews' %>
     </nav>
   </header>
-
 
   <%= yield %>
 
