--- a/MoviesApp/app/views/reviews/new.html.erb
+++ b/MoviesApp/app/views/reviews/new.html.erb
@@ -3,10 +3,15 @@
 
 <%= form_tag(reviews_url, method: 'post') do %>
 
+  <div>
+    <%= label_tag :movie_id %><br />
+    <%= select_tag :movie_id,
+                    options_from_collection_for_select(Movie.all, :id, :title) %>
+  </div>
 
   <div>
     <%= label_tag :summary %><br />
-    <%= text_field_tag :summary %>
+    <%= text_field_tag :summary, "", size: 80 %>
   </div>
 
   <div>
