--- a/MoviesApp/app/views/movies/index.html.erb
+++ b/MoviesApp/app/views/movies/index.html.erb
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th></th>
-      <th>Title</th>
+      <th><%= link_to "Title", "/movies?sortby=desc" %></th>
       <th>Year</th>
     </tr>
   </thead>
