made some changes

--- a/MoviesApp/app/views/layouts/application.html.erb
+++ b/MoviesApp/app/views/layouts/application.html.erb
@@ -13,7 +13,8 @@
     <nav>
       <%= link_to "Movies", '/movies' %> |
       <%= link_to "Theaters", '/theaters' %> |
-      <%= link_to "Reviews", '/reviews' %>
+      <%= link_to "Reviews", '/reviews' %> |
+      <%= link_to "Showtimes", '/showtimes' %>
     </nav>
   </header>
 
